--- a/index.html
+++ b/index.html
@@ -98,9 +98,163 @@
           </div>
         </div>
       </header>
+      <main>
+        <section class="hero">
+          <div class="container hero-container">
+            <div class="hero-content">
+              <h1 class="hero-title">
+                Easiest way to find your <span>dream place</span>
+              </h1>
+              <p class="hero-descr">
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry. Lorem Ipsum has been the industry's standard dummy
+                text ever since the 1500s....
+              </p>
+              <form class="hero-form">
+                <div class="hero-form-wrap">
+                  <label for="property_type" class="hero-form-label"
+                    >Property Type</label
+                  >
+                  <input
+                    type="text"
+                    placeholder="Long Terms"
+                    name="property_type"
+                    id="property_type"
+                    class="hero-form-input"
+                  />
+                </div>
+                <div class="hero-form-wrap">
+                  <label for="status" class="hero-form-label"
+                    >Property Status</label
+                  >
+                  <input
+                    type="text"
+                    placeholder="Rent"
+                    name="status"
+                    id="status"
+                    class="hero-form-input"
+                  />
+                </div>
+                <div class="hero-form-wrap">
+                  <label for="type" class="hero-form-label">Type</label>
+                  <input
+                    type="text"
+                    placeholder="Fully Furnished"
+                    name="type"
+                    id="type"
+                    class="hero-form-input"
+                  />
+                </div>
+                <div class="hero-form-wrap">
+                  <label for="location" class="hero-form-label">Location</label>
+                  <input
+                    type="text"
+                    placeholder="USA"
+                    name="location"
+                    id="location"
+                    class="hero-form-input"
+                  />
+                </div>
+                <button type="submit" class="hero-form-btn">
+                  <svg width="18" height="18">
+                    <use href="./images/icons.svg#icon-search"></use>
+                  </svg>
+                </button>
+              </form>
+            </div>
+            <div class="hero-img-wrap">
+              <img
+                srcset="./images/hero-min.jpg 1x, ./images/hero-2x-min.jpg 2x"
+                src="./images/hero-min.jpg"
+                alt="Hero Image"
+                class="hero-img"
+              />
+            </div>
+          </div>
+        </section>
+        <section class="services">
+          <div class="container services-container">
+            <h2 class="services-title main-title">Services</h2>
+            <p class="services-descr main-descr">
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum has been the industry's standard dummy text
+              ever since the 1500s....
+            </p>
+            <ul class="services-list">
+              <li class="services-item">
+                <svg class="services-item-icon">
+                  <use href="./images/icons.svg#icon-services-1"></use>
+                </svg>
+                <h3 class="services-item-title">Plumber</h3>
+                <p class="services-item-descr">
+                  Lorem Ipsum is simply dummy text of the printing and
+                  typesetting industry. Lorem Ipsum has been the industry's
+                  standard dummy text ever since the 1500s,
+                </p>
+              </li>
+              <li class="services-item">
+                <svg class="services-item-icon">
+                  <use href="./images/icons.svg#icon-services-2"></use>
+                </svg>
+                <h3 class="services-item-title">Painting</h3>
+                <p class="services-item-descr">
+                  Lorem Ipsum is simply dummy text of the printing and
+                  typesetting industry. Lorem Ipsum has been the industry's
+                  standard dummy text ever since the 1500s,
+                </p>
+              </li>
+              <li class="services-item">
+                <svg class="services-item-icon">
+                  <use href="./images/icons.svg#icon-services-3"></use>
+                </svg>
+                <h3 class="services-item-title">Logistics</h3>
+                <p class="services-item-descr">
+                  Lorem Ipsum is simply dummy text of the printing and
+                  typesetting industry. Lorem Ipsum has been the industry's
+                  standard dummy text ever since the 1500s,
+                </p>
+              </li>
+              <li class="services-item">
+                <svg class="services-item-icon">
+                  <use href="./images/icons.svg#icon-services-4"></use>
+                </svg>
+                <h3 class="services-item-title">Cleaning</h3>
+                <p class="services-item-descr">
+                  Lorem Ipsum is simply dummy text of the printing and
+                  typesetting industry. Lorem Ipsum has been the industry's
+                  standard dummy text ever since the 1500s,
+                </p>
+              </li>
+              <li class="services-item">
+                <svg class="services-item-icon">
+                  <use href="./images/icons.svg#icon-services-5"></use>
+                </svg>
+                <h3 class="services-item-title">Furnitures</h3>
+                <p class="services-item-descr">
+                  Lorem Ipsum is simply dummy text of the printing and
+                  typesetting industry. Lorem Ipsum has been the industry's
+                  standard dummy text ever since the 1500s,
+                </p>
+              </li>
+              <li class="services-item">
+                <svg class="services-item-icon">
+                  <use href="./images/icons.svg#icon-services-6"></use>
+                </svg>
+                <h3 class="services-item-title">More then</h3>
+                <p class="services-item-descr">
+                  Lorem Ipsum is simply dummy text of the printing and
+                  typesetting industry. Lorem Ipsum has been the industry's
+                  standard dummy text ever since the 1500s,
+                </p>
+              </li>
+            </ul>
+          </div>
+        </section>
+      </main>
     </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
     <script src="./js/script.js"></script>
   </body>
 </html>
