--- a/index.html
+++ b/index.html
@@ -250,6 +250,169 @@
             </ul>
           </div>
         </section>
+        <section class="about">
+          <div class="container about-container">
+            <div class="about-content">
+              <h2 class="about-title main-title">about us</h2>
+              <p class="about-descr">
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry. Lorem Ipsum has been the industry's standard dummy
+                text ever since the 1500s, when an unknown printer took a galley
+                of type and scrambled it to make a type specimen book. It has
+                survived not only five centuries, but also the leap into
+                electronic typesetting, remaining essentially unchanged. It was
+                popularised in the 1960s with the release of Letraset sheets
+                containing Lorem Ipsum passages, and more recently with desktop
+                publishing software like Aldus PageMaker including versions of
+                Lorem Ipsum.
+              </p>
+              <button class="about-btn">Learn More</button>
+            </div>
+            <div class="about-img-wrap">
+              <img
+                srcset="./images/about-min.jpg 1x, ./images/about-2x-min.jpg"
+                src="./images/about-min.jpg"
+                alt="About image"
+                class="about-img"
+              />
+            </div>
+          </div>
+        </section>
+        <section class="property">
+          <div class="container property-container">
+            <h2 class="property-title main-title">Property</h2>
+            <p class="property-descr main-descr">
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum has been the industry's standard dummy text
+              ever since the 1500s....
+            </p>
+            <ul class="property-list">
+              <li class="property-item">
+                <img
+                  srcset="
+                    ./images/property-min.jpg    1x,
+                    ./images/property-2x-min.jpg 2x
+                  "
+                  src="./images/property-min.jpg"
+                  alt="Property Image"
+                  class="property-item-img"
+                />
+                <div class="property-item-content">
+                  <p class="property-item-descr">
+                    1 Bedroom Apartment with No Commission Free Bills and
+                    Parking with Tawtheeq
+                  </p>
+                  <p class="property-item-location">
+                    <svg width="24" height="24">
+                      <use href="./images/icons.svg#icon-location"></use>
+                    </svg>
+                    Palika Market, Delhi
+                  </p>
+                  <p class="property-item-price">Rs. 2,00,000.00/year</p>
+                  <ul class="property-item-list">
+                    <li class="property-item-list-wrap">
+                      <p class="property-item-list-descr">Area (sqft)</p>
+                      <p class="property-item-list-number">920</p>
+                    </li>
+                    <li class="property-item-list-wrap">
+                      <p class="property-item-list-descr">Bedrooms</p>
+                      <p class="property-item-list-number">1</p>
+                    </li>
+                    <li class="property-item-list-wrap">
+                      <p class="property-item-list-descr">Bathrooms</p>
+                      <p class="property-item-list-number">1</p>
+                    </li>
+                  </ul>
+                  <button type="button" class="property-item-btn">
+                    view details
+                  </button>
+                </div>
+              </li>
+              <li class="property-item">
+                <img
+                  srcset="
+                    ./images/property-2-min.jpg    1x,
+                    ./images/property-2-2x-min.jpg 2x
+                  "
+                  src="./images/property-min.jpg"
+                  alt="Property Image"
+                  class="property-item-img"
+                />
+                <div class="property-item-content">
+                  <p class="property-item-descr">
+                    1 Bedroom Apartment with No Commission Free Bills and
+                    Parking with Tawtheeq
+                  </p>
+                  <p class="property-item-location">
+                    <svg width="24" height="24">
+                      <use href="./images/icons.svg#icon-location"></use>
+                    </svg>
+                    Palika Market, Delhi
+                  </p>
+                  <p class="property-item-price">Rs. 2,00,000.00/year</p>
+                  <ul class="property-item-list">
+                    <li class="property-item-list-wrap">
+                      <p class="property-item-list-descr">Area (sqft)</p>
+                      <p class="property-item-list-number">920</p>
+                    </li>
+                    <li class="property-item-list-wrap">
+                      <p class="property-item-list-descr">Bedrooms</p>
+                      <p class="property-item-list-number">1</p>
+                    </li>
+                    <li class="property-item-list-wrap">
+                      <p class="property-item-list-descr">Bathrooms</p>
+                      <p class="property-item-list-number">1</p>
+                    </li>
+                  </ul>
+                  <button type="button" class="property-item-btn">
+                    view details
+                  </button>
+                </div>
+              </li>
+              <li class="property-item">
+                <img
+                  srcset="
+                    ./images/property-3-min.jpg    1x,
+                    ./images/property-3-3x-min.jpg 2x
+                  "
+                  src="./images/property-min.jpg"
+                  alt="Property Image"
+                  class="property-item-img"
+                />
+                <div class="property-item-content">
+                  <p class="property-item-descr">
+                    1 Bedroom Apartment with No Commission Free Bills and
+                    Parking with Tawtheeq
+                  </p>
+                  <p class="property-item-location">
+                    <svg width="24" height="24">
+                      <use href="./images/icons.svg#icon-location"></use>
+                    </svg>
+                    Palika Market, Delhi
+                  </p>
+                  <p class="property-item-price">Rs. 2,00,000.00/year</p>
+                  <ul class="property-item-list">
+                    <li class="property-item-list-wrap">
+                      <p class="property-item-list-descr">Area (sqft)</p>
+                      <p class="property-item-list-number">920</p>
+                    </li>
+                    <li class="property-item-list-wrap">
+                      <p class="property-item-list-descr">Bedrooms</p>
+                      <p class="property-item-list-number">1</p>
+                    </li>
+                    <li class="property-item-list-wrap">
+                      <p class="property-item-list-descr">Bathrooms</p>
+                      <p class="property-item-list-number">1</p>
+                    </li>
+                  </ul>
+                  <button type="button" class="property-item-btn">
+                    view details
+                  </button>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </section>
       </main>
     </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
