--- a/index.html
+++ b/index.html
@@ -413,11 +413,126 @@
             </ul>
           </div>
         </section>
+        <section class="benefits">
+          <div class="container benefits-container">
+            <h2 class="benefits-title main-title">how it works?</h2>
+            <p class="benefits-descr main-descr">
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum has been the industry's standard dummy text
+              ever since the 1500s....
+            </p>
+            <ul class="benefits-list">
+              <li class="benefits-item">
+                <img
+                  srcset="
+                    ./images/list-1-min.png    1x,
+                    ./images/list-1-2x-min.png
+                  "
+                  src="./images/list-1-min.png"
+                  alt="Benefits Image"
+                  class="benefits-item-img"
+                />
+                <h3 class="benefits-item-title">Looking for a tenant?</h3>
+                <p class="benefits-item-descr">
+                  Lorem Ipsum is simply dummy text of the printing and
+                  typesetting industry. Lorem Ipsum has been the industry's
+                  standard...
+                </p>
+              </li>
+              <li class="benefits-item">
+                <img
+                  srcset="
+                    ./images/list-2-min.png    1x,
+                    ./images/list-2-2x-min.png
+                  "
+                  src="./images/list-2-min.png"
+                  alt="Benefits Image"
+                  class="benefits-item-img"
+                />
+                <h3 class="benefits-item-title">A dedicated</h3>
+                <p class="benefits-item-descr">
+                  Lorem Ipsum is simply dummy text of the printing and
+                  typesetting industry. Lorem Ipsum has been the industry's
+                  standard...
+                </p>
+              </li>
+              <li class="benefits-item">
+                <img
+                  srcset="
+                    ./images/list-3-min.png    1x,
+                    ./images/list-3-2x-min.png
+                  "
+                  src="./images/list-3-min.png"
+                  alt="Benefits Image"
+                  class="benefits-item-img"
+                />
+                <h3 class="benefits-item-title">Marketing & Promotions</h3>
+                <p class="benefits-item-descr">
+                  Lorem Ipsum is simply dummy text of the printing and
+                  typesetting industry. Lorem Ipsum has been the industry's
+                  standard...
+                </p>
+              </li>
+              <li class="benefits-item">
+                <img
+                  srcset="
+                    ./images/list-4-min.png    1x,
+                    ./images/list-4-2x-min.png
+                  "
+                  src="./images/list-4-min.png"
+                  alt="Benefits Image"
+                  class="benefits-item-img"
+                />
+                <h3 class="benefits-item-title">Freedom from bogus callers</h3>
+                <p class="benefits-item-descr">
+                  Lorem Ipsum is simply dummy text of the printing and
+                  typesetting industry. Lorem Ipsum has been the industry's
+                  standard...
+                </p>
+              </li>
+              <li class="benefits-item">
+                <img
+                  srcset="
+                    ./images/list-5-min.png    1x,
+                    ./images/list-5-2x-min.png
+                  "
+                  src="./images/list-5-min.png"
+                  alt="Benefits Image"
+                  class="benefits-item-img"
+                />
+                <h3 class="benefits-item-title">Tenant Selects Property</h3>
+                <p class="benefits-item-descr">
+                  Lorem Ipsum is simply dummy text of the printing and
+                  typesetting industry. Lorem Ipsum has been the industry's
+                  standard...
+                </p>
+              </li>
+              <li class="benefits-item">
+                <img
+                  srcset="
+                    ./images/list-6-min.png    1x,
+                    ./images/list-6-2x-min.png
+                  "
+                  src="./images/list-6-min.png"
+                  alt="Benefits Image"
+                  class="benefits-item-img"
+                />
+                <h3 class="benefits-item-title">Deal Closure</h3>
+                <p class="benefits-item-descr">
+                  Lorem Ipsum is simply dummy text of the printing and
+                  typesetting industry. Lorem Ipsum has been the industry's
+                  standard...
+                </p>
+              </li>
+            </ul>
+          </div>
+        </section>
       </main>
     </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/CSSRulePlugin.min.js"></script>
     <script src="./js/script.js"></script>
   </body>
 </html>
