--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.min.css" />
     <title>Legacy House</title>
   </head>
@@ -527,12 +531,163 @@
             </ul>
           </div>
         </section>
+        <section class="team">
+          <div class="container team-container">
+            <h2 class="team-title main-title">client testimonials</h2>
+            <p class="team-descr main-descr">
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum has been the industry's standard dummy text
+              ever since the 1500s....
+            </p>
+            <!-- Slider main container -->
+            <div class="swiper">
+              <!-- Additional required wrapper -->
+              <ul class="swiper-wrapper team-list">
+                <!-- Slides -->
+                <div class="swiper-slide team-item">
+                  <img
+                    srcset="
+                      ./images/maci-min.jpg    1x,
+                      ./images/maci-2x-min.jpg 2x
+                    "
+                    src="./images/maci-min.jpg"
+                    alt="Author"
+                    class="team-item-img"
+                  />
+                  <div class="team-item-content">
+                    <svg class="team-item-icon">
+                      <use href="./images/icons.svg#icon-quote"></use>
+                    </svg>
+                    <p class="team-item-descr">
+                      Lorem Ipsum is simply dummy text of the printing and
+                      typesetting industry. Lorem Ipsum has been the industry's
+                      standard dummy text ever since the 1500s, when an unknown
+                      printer took a galley of type and scrambled it to make a
+                      type specimen book......
+                    </p>
+                    <h3 class="team-item-name">Maciej Witt</h3>
+                    <p class="team-item-location">Singapore</p>
+                  </div>
+                </div>
+                <div class="swiper-slide team-item">
+                  <img
+                    srcset="
+                      ./images/maci-min.jpg    1x,
+                      ./images/maci-2x-min.jpg 2x
+                    "
+                    src="./images/maci-min.jpg"
+                    alt="Author"
+                    class="team-item-img"
+                  />
+                  <div class="team-item-content">
+                    <svg class="team-item-icon">
+                      <use href="./images/icons.svg#icon-quote"></use>
+                    </svg>
+                    <p class="team-item-descr">
+                      Lorem Ipsum is simply dummy text of the printing and
+                      typesetting industry. Lorem Ipsum has been the industry's
+                      standard dummy text ever since the 1500s, when an unknown
+                      printer took a galley of type and scrambled it to make a
+                      type specimen book......
+                    </p>
+                    <h3 class="team-item-name">Maciej Witt</h3>
+                    <p class="team-item-location">Singapore</p>
+                  </div>
+                </div>
+                <div class="swiper-slide team-item">
+                  <img
+                    srcset="
+                      ./images/maci-min.jpg    1x,
+                      ./images/maci-2x-min.jpg 2x
+                    "
+                    src="./images/maci-min.jpg"
+                    alt="Author"
+                    class="team-item-img"
+                  />
+                  <div class="team-item-content">
+                    <svg class="team-item-icon">
+                      <use href="./images/icons.svg#icon-quote"></use>
+                    </svg>
+                    <p class="team-item-descr">
+                      Lorem Ipsum is simply dummy text of the printing and
+                      typesetting industry. Lorem Ipsum has been the industry's
+                      standard dummy text ever since the 1500s, when an unknown
+                      printer took a galley of type and scrambled it to make a
+                      type specimen book......
+                    </p>
+                    <h3 class="team-item-name">Maciej Witt</h3>
+                    <p class="team-item-location">Singapore</p>
+                  </div>
+                </div>
+                <div class="swiper-slide team-item">
+                  <img
+                    srcset="
+                      ./images/maci-min.jpg    1x,
+                      ./images/maci-2x-min.jpg 2x
+                    "
+                    src="./images/maci-min.jpg"
+                    alt="Author"
+                    class="team-item-img"
+                  />
+                  <div class="team-item-content">
+                    <svg class="team-item-icon">
+                      <use href="./images/icons.svg#icon-quote"></use>
+                    </svg>
+                    <p class="team-item-descr">
+                      Lorem Ipsum is simply dummy text of the printing and
+                      typesetting industry. Lorem Ipsum has been the industry's
+                      standard dummy text ever since the 1500s, when an unknown
+                      printer took a galley of type and scrambled it to make a
+                      type specimen book......
+                    </p>
+                    <h3 class="team-item-name">Maciej Witt</h3>
+                    <p class="team-item-location">Singapore</p>
+                  </div>
+                </div>
+                <div class="swiper-slide team-item">
+                  <img
+                    srcset="
+                      ./images/maci-min.jpg    1x,
+                      ./images/maci-2x-min.jpg 2x
+                    "
+                    src="./images/maci-min.jpg"
+                    alt="Author"
+                    class="team-item-img"
+                  />
+                  <div class="team-item-content">
+                    <svg class="team-item-icon">
+                      <use href="./images/icons.svg#icon-quote"></use>
+                    </svg>
+                    <p class="team-item-descr">
+                      Lorem Ipsum is simply dummy text of the printing and
+                      typesetting industry. Lorem Ipsum has been the industry's
+                      standard dummy text ever since the 1500s, when an unknown
+                      printer took a galley of type and scrambled it to make a
+                      type specimen book......
+                    </p>
+                    <h3 class="team-item-name">Maciej Witt</h3>
+                    <p class="team-item-location">Singapore</p>
+                  </div>
+                </div>
+              </ul>
+              <!-- If we need pagination -->
+              <div class="swiper-pagination"></div>
+
+              <!-- If we need navigation buttons -->
+              <div class="swiper-button-prev"></div>
+              <div class="swiper-button-next"></div>
+
+              <!-- If we need scrollbar -->
+            </div>
+          </div>
+        </section>
       </main>
     </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/CSSRulePlugin.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="./js/script.js"></script>
   </body>
 </html>
