--- a/index.html
+++ b/index.html
@@ -37,25 +37,25 @@
           <nav class="header-nav">
             <ul class="header-nav-list">
               <li class="header-nav-item">
-                <a href="#!" class="header-nav-link"></a>
+                <a href="#!" class="header-nav-link">Home</a>
               </li>
               <li class="header-nav-item">
-                <a href="#!" class="header-nav-link"></a>
+                <a href="#!" class="header-nav-link">Services</a>
               </li>
               <li class="header-nav-item">
-                <a href="#!" class="header-nav-link"></a>
+                <a href="#!" class="header-nav-link">Properties</a>
               </li>
               <li class="header-nav-item">
-                <a href="#!" class="header-nav-link"></a>
+                <a href="#!" class="header-nav-link">About us</a>
               </li>
               <li class="header-nav-item">
-                <a href="#!" class="header-nav-link"></a>
+                <a href="#!" class="header-nav-link">Contact Us</a>
               </li>
             </ul>
           </nav>
           <div class="header-auth">
-            <button type="button" class="header-auth-login"></button>
-            <button type="button" class="header-auth-reg"></button>
+            <button type="button" class="header-auth-login">Sign In</button>
+            <button type="button" class="header-auth-reg">Sign Up</button>
           </div>
           <button type="button" class="header-burger-open">
             <span></span>
