--- a/index.html
+++ b/index.html
@@ -37,19 +37,19 @@
           <nav class="header-nav">
             <ul class="header-nav-list">
               <li class="header-nav-item">
-                <a href="#!" class="header-nav-link">Home</a>
+                <a href="./index.html" class="header-nav-link">Home</a>
               </li>
               <li class="header-nav-item">
-                <a href="#!" class="header-nav-link">Services</a>
+                <a href="#services" class="header-nav-link">Services</a>
               </li>
               <li class="header-nav-item">
-                <a href="#!" class="header-nav-link">Properties</a>
+                <a href="#property" class="header-nav-link">Properties</a>
               </li>
               <li class="header-nav-item">
-                <a href="#!" class="header-nav-link">About us</a>
+                <a href="#team" class="header-nav-link">About us</a>
               </li>
               <li class="header-nav-item">
-                <a href="#!" class="header-nav-link">Contact Us</a>
+                <a href="#send" class="header-nav-link">Contact Us</a>
               </li>
             </ul>
           </nav>
